--- a/osa0/t0.4_uusi_muistiinpano.md
+++ b/osa0/t0.4_uusi_muistiinpano.md
@@ -1,6 +1,10 @@
 Kaavioiden luonti: https://www.websequencediagrams.com/
 
 ## Tehtävä 0.4: uusi muistiinpano
+
+![Tehtava 0.4](tehtävä_0.4_uusi_muistiinpano.png)
+
+### Koodi
 ```
 note over selain:
 Käyttäjä painaa "save" nappia sivulla.
@@ -34,3 +38,4 @@ end note
 selain->palvelin: HTTP GET /favicon.ico
 palvelin-->selain: Status: 404 Not Found, HTML-virheviesti
 ```
+
