--- a/osa0/t0.5_Single_Page_App.md
+++ b/osa0/t0.5_Single_Page_App.md
@@ -1,5 +1,9 @@
 ## Tehtävä 0.5: Single Page App
 
+### Kuva
+![Tehtava 0.5](tehtävä_0.5_Single_Page_App.png)
+
+### Koodi
 ```
 note over selain:
 Käyttäjä navigoi sivulle ensimmäistä kertaa.
