--- a/osa0/t0.6_Uusi_muistiinpano.md
+++ b/osa0/t0.6_Uusi_muistiinpano.md
@@ -1,5 +1,9 @@
 ## Tehtävä 0.6: Uusi muistiinpano
 
+### Kuva
+![Tehtava 0.6](tehtävä_0.6_Uusi_muistiinpano.png)
+
+### Koodi
 ```
 note over selain:
 Käyttäjä painaa "save" nappia sivulla.
